--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vueuse/core": "^4.9.2",
     "@vueuse/head": "^0.5.1",
+    "dayjs": "^1.10.4",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.2",
     "typed.js": "^2.0.12",
@@ -28,10 +29,13 @@
     "@vue/compiler-sfc": "^3.0.11",
     "@vue/server-renderer": "^3.0.11",
     "cross-env": "^7.0.3",
+    "diacritics": "^1.3.0",
     "eslint": "^7.26.0",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "https-localhost": "^4.6.5",
+    "markdown-it-anchor": "^7.1.0",
+    "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-prism": "^2.1.6",
     "pnpm": "^6.3.0",
     "typescript": "^4.2.4",
